# xcel

./: .gitignore  CMakeLists.txt  Containerfile  Makefile  README.md  build.sh  compile_commands.json  docker-compose.yml  main.cpp  main.py  pyproject.toml  requirements.txt  two_track_modelica_model.fmu  visualize.py
.devcontainer/: devcontainer.json
assets/: car.xml  scene_base.xml
assets/tracks/: FSG_cones.xml  FSG_scene.xml
gazebo/: CMakeLists.txt
gazebo/include/: vehicle_fmi.hpp
gazebo/models/cars/gotthard/config/: car.yaml
gazebo/models/cone_blue/: model.config
gazebo/models/track/: FSG.sdf  acceleration.sdf  skidpad.sdf
gazebo/src/: vehicle_fmi.cpp
gazebo/worlds/: track.sdf
middleware/: CMakeLists.txt  README.md
middleware/include/: vehicle_fmi.hpp
middleware/src/: vehicle_fmi.cpp
sim/: comms.py  lidar.py  proto.py  world.py
sim/vehicle/: __init__.py  dynamics.py  state.py
src/: main.cpp
src/gazebo/: README.md
src/gazebo/models/cone_blue/: model.sdf
src/gazebo/models/cone_orange/: model.sdf
src/gazebo/models/cone_orange_big/: model.sdf
src/gazebo/models/cone_yellow/: model.sdf
src/gazebo/models/lidar/: model.config
src/gazebo/models/time_keeping/: model.sdf
src/gazebo/models/track/: FSI.sdf  model.config  thin.sdf
src/gazebo/worlds/: track.sdf  viz_lidar.sdf
