[project]
name = "stupid-fucking-simulator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "absl-py==2.4.0",
    "attrs==26.1.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "etils==1.14.0",
    "evdev==1.9.3",
    "fonttools==4.63.0",
    "fsspec==2026.4.0",
    "glfw==2.10.0",
    "jax==0.10.1",
    "jax-cuda12-pjrt==0.10.1",
    "jax-cuda12-plugin==0.10.1",
    "jaxlib==0.10.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "ml-dtypes==0.5.4",
    "mujoco==3.9.0",
    "mujoco-lidar==0.3.0",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.9.2.10",
    "nvidia-cuda-cccl-cu12==12.9.27",
    "nvidia-cuda-cupti-cu12==12.9.79",
    "nvidia-cuda-nvcc-cu12==12.9.86",
    "nvidia-cuda-nvrtc-cu12==12.9.86",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.23.0.39",
    "nvidia-cufft-cu12==11.4.1.4",
    "nvidia-cusolver-cu12==11.7.5.82",
    "nvidia-cusparse-cu12==12.5.10.65",
    "nvidia-nccl-cu12==2.30.4",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvshmem-cu12==3.6.5",
    "opt-einsum==3.4.0",
    "packaging==26.2",
    "pillow==12.2.0",
    "protobuf>=7.35.1",
    "psutil==7.2.2",
    "pyarrow==24.0.0",
    "pynput==1.8.2",
    "pyopengl==3.1.10",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-xlib==0.33",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rerun-sdk==0.33.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "zhplot==1.0.0",
    "zipp==4.1.0",
]
